--- a/index.html
+++ b/index.html
@@ -1443,6 +1443,19 @@
                     "isFavorite": false,
                     "weight": 1,
                     "priceRange": "low" // 低價位 (100元以下)
+                },
+                {
+                    "name": "大銅板",
+                    "type": "快餐",
+                    "rating": 4.3,
+                    "hours": "平日 11:00–14:00、16:30–20:00  假日無",
+                    "tags": ["午餐", "晚餐", "主食"],
+                    "location": "陽明校區",
+                    "lat": 25.11685729386,
+                    "lng": 121.517792682620149,
+                    "isFavorite": false,
+                    "weight": 1,
+                    "priceRange": "low" // 低價位 (100元以下)
                 }
             ];
 
